--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ unpackage
 .hbuilderx/*.*
 floo-2.0.0.uniapp.js
 floo-3.0.0.uniapp.js
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
+.hintrc
+
+uni_modules
